Fix GO button z-index

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 }
 
 .platform__link--a {
+  position:relative;
   padding: 6px 37px;
   border-radius: 2px 2px 2px 2px;
     -moz-border-radius: 2px 2px 2px 2px;
@@ -138,6 +139,7 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
   text-decoration: none;
   text-transform: uppercase;
   background-color: rgba(131, 6, 69, 0.29);
+  z-index: 1;
 }
 
 .platform__link--a:hover {
@@ -179,6 +181,7 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 
 .platform__footer {
   padding: 15px 20px;
+  z-index:-1;
 }
 
 .page__footer {
